Specify python eggs directory (see note, ARGH)
I was getting an error from gevent's monkey patching about the Python egg cache being set to /root/.python-eggs, which supervisord didn't have permission to write to. I've never heard of a Python egg cache beore, and was a bit surprised that gevent was trying to use a system cache instead of a virtualenv-specific one, but it seemed easiest to just take advantage of the supervisord configuration setting and set the PYTHON_EGG_CACHE environment variable.

Except, ARGH, this didn't work. The file path must be in quotes, since otherwise for some reason it's just interpreted as "/", sigh.

--- a/cookbooks/vine_xmpp/templates/default/supervisord_leaf.conf.erb
+++ b/cookbooks/vine_xmpp/templates/default/supervisord_leaf.conf.erb
@@ -1,6 +1,7 @@
 [program:leaf]
 command=<%= node['vine_xmpp']['xmpp_env_dir'] %>/bin/python <%= node['vine_xmpp']['xmpp_repo_dir'] %>/leaf_component.py
 directory=<%= node['vine_xmpp']['xmpp_repo_dir'] %>
+environment=PYTHON_EGG_CACHE="<%= node['vine_xmpp']['xmpp_env_dir'] %>/.python-eggs"
 user=<%= @env_data['server']['user'] %>
 numprocs=1
 stdout_logfile=<%= @log_dir %>/(program_name)s_%(process_num)02d.log
