Include the leaf's MySQL lock number in logs
This was a bit tricky, since before everything was using the default logging module. Because some things (such as MySQL queries) might need to be logged *before* we know the name, we need both a default logger and another one that we initialize when we get register a lock number.

Adding stuff to the already-icky global "g" object in constants.py feels like the wrong way to do this, but I definitely don't want to be passing around a log object everywhere, so this seems like the least verbose thing to do. The "use_new_logger" method isn't great, but at least prevents me from duplicating that code in multiple places.

UGH re having to set g.logger.propagate = False, since otherwise it was also calling the logging module's default logger, which looked like %(loglevel)s:%(name)s:%(message)s or something, and thus double-logging my messages.

Also, now the logs from all the leaves now go to a single file. Since any leaf can handle any message, this seemed to make more sense for the sake of preserving order.

Next I need to figure out why Supervisor isn't gently shutting down the leaf nodes.

--- a/cookbooks/vine_xmpp/templates/default/constants.py.erb
+++ b/cookbooks/vine_xmpp/templates/default/constants.py.erb
@@ -1,3 +1,4 @@
+import logging
 import shortuuid
 shortuuid.set_alphabet('1234567890abcdefghijklmnopqrstuvwxyz')
 
@@ -38,5 +39,18 @@ default_user_password = '<%= @env_data['xmpp']['default_password'] %>'
 
 # global variables to save the hassle of passing around the values
 class g(object):
+    loglevel = None
+    logger = None
     db = None 
     ectl = None
+    
+    @classmethod
+    def use_new_logger(self, name):
+        formatter = logging.Formatter('%(asctime)-15s %(name)-6s %(levelname)-7s - %(message)s')
+        ch = logging.StreamHandler()
+        ch.setLevel(logging.DEBUG)
+        ch.setFormatter(formatter)
+        g.logger = logging.getLogger(name)
+        g.logger.setLevel(g.loglevel)
+        g.logger.propagate = False  # otherwise the main logging.info (or whatever) gets called too. ugh this was annoying to figure out.
+        g.logger.addHandler(ch)
