Fix typo with xmlrpc env_var constant

--- a/cookbooks/vine_xmpp/templates/default/constants.py.erb
+++ b/cookbooks/vine_xmpp/templates/default/constants.py.erb
@@ -15,7 +15,7 @@ max_leaves = <%= @env_data['leaves']['max_leaves'] %>
 
 xmlrpc_port = <%= @env_data['ports']['xmlrpc'] %>
 leaves_xmlrpc_user = '<%= @env_data['xmlrpc']['leaves_user'] %>'
-leaves_xmlrpc_password = '<%= @env_data['mysql']['leaves_password'] %>'
+leaves_xmlrpc_password = '<%= @env_data['xmlrpc']['leaves_password'] %>'
 
 leaves_mysql_user = '<%= @env_data['mysql']['leaves_user'] %>'
 leaves_mysql_lock_name = 'leaf'
