--- a/cookbooks/vine_xmpp/templates/default/constants.py.erb
+++ b/cookbooks/vine_xmpp/templates/default/constants.py.erb
@@ -12,19 +12,34 @@ leaves_jid_user = '<%= node.run_state['config']['leaves']['jid_user'] %>'
 leaves_jid = '%s@%s' % (leaves_jid_user, leaves_domain)
 leaves_secret = '<%= node.run_state['config']['leaves']['secret'] %>'
 max_leaves = <%= node.run_state['config']['leaves']['max_leaves'] %>
+graph_jid_user = '<%= node.run_state['config']['xmlrpc']['graph_user'] %>'
+graph_jid = '%s@%s' % (graph_jid_user, domain)
+graph_xmpp_password = '<%= node.run_state['config']['xmlrpc']['graph_password'] %>'
 
 xmlrpc_port = <%= node.run_state['config']['xmlrpc']['port'] %>
 leaves_xmlrpc_user = '<%= node.run_state['config']['xmlrpc']['leaves_user'] %>'
 leaves_xmlrpc_password = '<%= node.run_state['config']['xmlrpc']['leaves_password'] %>'
+web_xmlrpc_user = '<%= node.run_state['config']['xmlrpc']['web_user'] %>'
+web_xmlrpc_password = '<%= node.run_state['config']['xmlrpc']['web_password'] %>'
 
-leaves_mysql_user = '<%= node.run_state['config']['mysql']['leaves_user'] %>'
-leaves_mysql_lock_name = 'leaf'
-leaves_mysql_password ='<%= node.run_state['config']['mysql']['leaves_password'] %>'
 db_host = '<%= node.run_state['config']['mysql']['host'] %>'
 db_name = '<%= node.run_state['config']['mysql']['main_name'] %>'
+leaves_mysql_lock_name = 'leaf'
+leaves_mysql_user = '<%= node.run_state['config']['mysql']['leaves_user'] %>'
+leaves_mysql_password ='<%= node.run_state['config']['mysql']['leaves_password'] %>'
+graph_mysql_user = '<%= node.run_state['config']['mysql']['graph_user'] %>'
+graph_mysql_password = '<%= node.run_state['config']['mysql']['graph_password'] %>'
+celery_db_name = '<%= node.run_state['config']['mysql']['celery_name'] %>'
+celery_mysql_user = '<%= node.run_state['config']['mysql']['celery_user'] %>'
+celery_mysql_password = '<%= node.run_state['config']['mysql']['celery_password'] %>'
+
+aws_sqs_prefix = '<%= node.run_state['config']['aws']['sqs_prefix'] %>'
+aws_access_key_id = '<%= node.run_state['config']['aws']['access_key_id'] %>'
+aws_secret_access_key = '<%= node.run_state['config']['aws']['secret_access_key'] %>'  # if it's broken, regenerate this until you get one without a "/"
 
 vinebot_prefix = 'vinebot_'
 
+protected_users = <%= node.run_state['config']['xmpp_users']['admins'] %> + [web_xmlrpc_user, leaves_jid_user, graph_jid_user]
 admin_jids = ['%s@%s' % (user, domain) for user in <%= node.run_state['config']['xmpp_users']['admins'] %>]
 graph_xmpp_jid = '%s@%s' % ('<%= node.run_state['config']['xmlrpc']['graph_user'] %>', domain)
 
