--- a/cookbooks/vine_xmpp/templates/default/constants.py.erb
+++ b/cookbooks/vine_xmpp/templates/default/constants.py.erb
@@ -17,6 +17,10 @@ graph_jid_user = '<%= node.run_state['config']['xmlrpc']['graph_user'] %>'
 graph_jid = '%s@%s' % (graph_jid_user, domain)
 graph_xmpp_password = '<%= node.run_state['config']['xmlrpc']['graph_password'] %>'
 
+help_jid_user = '<%= node.run_state['config']['xmpp_users']['help_user'] %>'
+help_xmpp_password = '<%= node.run_state['config']['xmpp_users']['help_password'] %>'
+onboarding_messages = ['Welcome to Vine!']  # The indices in these lists correspond to a user's onboarding_stage integer, at least for now
+
 xmlrpc_port = <%= node.run_state['config']['xmlrpc']['port'] %>
 leaves_xmlrpc_user = '<%= node.run_state['config']['xmlrpc']['leaves_user'] %>'
 leaves_xmlrpc_password = '<%= node.run_state['config']['xmlrpc']['leaves_password'] %>'
@@ -30,6 +34,8 @@ leaves_mysql_user = '<%= node.run_state['config']['mysql']['leaves_user'] %>'
 leaves_mysql_password ='<%= node.run_state['config']['mysql']['leaves_password'] %>'
 graph_mysql_user = '<%= node.run_state['config']['mysql']['graph_user'] %>'
 graph_mysql_password = '<%= node.run_state['config']['mysql']['graph_password'] %>'
+help_mysql_user = '<%= node.run_state['config']['mysql']['help_user'] %>'
+help_mysql_password = '<%= node.run_state['config']['mysql']['help_password'] %>'
 celery_db_name = '<%= node.run_state['config']['mysql']['celery_name'] %>'
 celery_mysql_user = '<%= node.run_state['config']['mysql']['celery_user'] %>'
 celery_mysql_password = '<%= node.run_state['config']['mysql']['celery_password'] %>'
