Use my mod_session ejabberd module to sync rosters
I need a way to notify the leaves once (and only once) whenever a user connects, and the easiest way to do this seemed to add [a new ejabberd module](
https://github.com/lehrblogger/ejabberd/commit/c90bf9ff1495b2615a68a2982aa0408cb153ea63) to send a message to my component whenever a new session was opened. That way the leaf can reliably sync the roster for just-connected users, rather than betting on the hacky random stuff I was doing before. A reliable roster sync on connect will let us *only* otherwise modify rosters for online users (see next commit), which should significantly speed up changing conversation states.

Also, make the FetchedUser object a tiny bit more forgiving with invalid inputs, since it's better to throw an error than totally fail.

--- a/cookbooks/vine_xmpp/templates/default/constants.py.erb
+++ b/cookbooks/vine_xmpp/templates/default/constants.py.erb
@@ -19,6 +19,7 @@ helpbot_jid_user = '<%= node.run_state['config']['xmpp_users']['helpbot_user'] %
 helpbot_jid = '%s@%s' % (helpbot_jid_user, domain)
 helpbot_xmpp_password = '<%= node.run_state['config']['xmpp_users']['helpbot_password'] %>'
 act_on_user_stage = 'fiph5bap3av5on5bid2y'  # just a random string
+session_opened_signal = '<%= node.run_state['config']['leaves']['session_opened_signal'] %>'
 
 xmlrpc_server = '<%= node.run_state['config']['xmlrpc']['domain'] %>'
 xmlrpc_port = <%= node.run_state['config']['xmlrpc']['port'] %>
